--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/i18next": "^13.0.0",
+    "@types/react-i18next": "^8.1.0",
     "antd": "^5.6.3",
+    "i18next": "^23.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
